# arity-arrays

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  justfile  mise.toml
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/actions/setup-rust/: action.yml
.github/workflows/: bench-compare-comment.yml  bench-compare-dispatch.yml  bench-compare-pr.yml  bench-compare-push.yml  bench-compare.yml  ci.yml  miri-full.yml  miri.yml
crates/arity-arrays/: Cargo.toml  README.md
crates/arity-arrays/benches/: quick_criterion.rs  support.rs  throughput.rs  trie.rs  trie_fixture.rs
crates/arity-arrays/examples/: inline_probe.rs
crates/arity-arrays/src/: arity.rs  compact.rs  fixed.rs  gapped.rs  lib.rs  macros.rs  packed.rs  raw.rs
crates/arity-arrays/tests/: bench_internals.rs  memory_report.rs  mutation.rs  roundtrip.rs  serde_compact.rs  serde_logical.rs  serde_snapshots.rs  trie_internals.rs
crates/arity-arrays/tests/snapshots/: memory_report__memory_table.snap  serde_snapshots__packed_compact.snap  serde_snapshots__packed_logical.snap
crates/arity-bitmap/: Cargo.toml  README.md
crates/arity-bitmap/src/: iter.rs  lib.rs  native.rs  u256.rs
crates/arity-bitmap/tests/: generic_use.rs  proptests.rs
crates/arity-index/: Cargo.toml  README.md
crates/arity-index/src/: lib.rs  niche.rs  range.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/superpowers/: 2026-06-27-prepublish-verification.md
docs/superpowers/plans/: 2026-06-26-arity-arrays.md  2026-06-26-arity-bitmap.md  2026-06-26-arity-index.md  2026-06-27-hardening-1-breaking-api.md  2026-06-27-hardening-2-features-ci.md  2026-06-27-hardening-3-mutation.md  2026-06-27-hardening-4-serde-ethnum.md  2026-06-27-hardening-5-publish.md
docs/superpowers/specs/: 2026-06-26-arity-arrays-design.md  2026-06-27-arity-arrays-hardening-design.md
fuzz/: Cargo.toml  Dockerfile
fuzz/fuzz_targets/: bitmap_roundtrip.rs  compact_decode.rs  gapped_128.rs  gapped_16.rs  gapped_256.rs  gapped_32.rs  gapped_64.rs  gapped_8.rs  mutation_128.rs  mutation_16.rs  mutation_256.rs  mutation_32.rs  mutation_64.rs  mutation_8.rs  packed_ops.rs
fuzz/src/: bitmap.rs  compact.rs  mutation.rs
scripts/: bench-ab.sh
xtask/: Cargo.toml  README.md
xtask/src/: bench_id.rs  charts.rs  cmd.rs  compare.rs  delta.rs  fs.rs  ingest.rs  lib.rs  main.rs  svg.rs  tables.rs
xtask/src/cmd/: charts.rs  compare.rs  ec2_bench.rs
xtask/src/cmd/ec2_bench/: aws.rs  git.rs  iam.rs  naming.rs  plan.rs  poll.rs  provision.rs  run.rs  teardown.rs  userdata.rs  validate.rs
xtask/tests/: render_snapshots.rs
xtask/tests/snapshots/: render_snapshots__compare_delta_table.snap  render_snapshots__readme_comparison_table.snap
