# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
authors = ["Brandon LeBlanc <brandon@leblanc.codes>"]
repository = "https://github.com/demosdemon/arity-arrays.git"
homepage = "https://github.com/demosdemon/arity-arrays"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
arity-arrays = { path = "crates/arity-arrays", version = "0.2.0-alpha.2" }
arity-bitmap = { path = "crates/arity-bitmap", version = "0.2.0-alpha.2", default-features = false }
arity-index = { path = "crates/arity-index", version = "0.1.2", default-features = false }

[workspace.lints.rust]
let_underscore_drop = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny"

# Opt-in profile for measuring link-time optimization's *ceiling* on the hot
# path. NOT a default: downstream consumers pick their own profile, so the
# crates are tuned to be fast without LTO (see the concrete Bitmap/Raw
# `#[inline]` annotations). `lto = "fat"` is deliberate, not `"thin"`: this
# profile only exists to answer whether LTO inlines anything our `#[inline]`
# annotations miss, and fat LTO is the strictly stronger test — if fat finds
# nothing extra, thin certainly won't either. Thin's usual advantage is faster
# compile time, which matters for a profile you ship; this one is a one-off
# analysis vehicle, so that advantage doesn't apply. Named `lto-probe`, not
# `release-lto`, so the manifest is authoritative on every machine: Cargo
# config-file profiles override manifest profiles, and a machine-local
# `~/.cargo/config.toml` happening to declare a same-named profile would
# silently win over this one. Selected via `cargo build --profile lto-probe`
# / `just bench-lto`; it never affects a plain `cargo build --release`, `cargo
# bench`, or any downstream build.
[profile.lto-probe]
inherits = "release"
lto = "fat"
codegen-units = 1
