[package]
name = "arity-arrays-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Make `fuzz/` its own workspace root so Cargo does not treat it as a stray
# member of the parent workspace (whose `members = ["crates/*"]` excludes it).
# Without this, `cargo fuzz build/run` aborts with "believes it's in a workspace
# when it's not". This is the standard cargo-fuzz layout.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
# Bumping postcard's version or features changes the compact_decode wire
# format and can invalidate accumulated corpus (corpus is not committed).
postcard = { version = "1.1.3", features = ["use-std"] }
serde_with = "3.21.0"
arity-arrays= { version = "0.1.0", path = "../crates/arity-arrays", features = ["serde_with"] }

[[bin]]
name = "mutation_16"
path = "fuzz_targets/mutation_16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_8"
path = "fuzz_targets/mutation_8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_32"
path = "fuzz_targets/mutation_32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_64"
path = "fuzz_targets/mutation_64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_128"
path = "fuzz_targets/mutation_128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_256"
path = "fuzz_targets/mutation_256.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_16"
path = "fuzz_targets/gapped_16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_8"
path = "fuzz_targets/gapped_8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_32"
path = "fuzz_targets/gapped_32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_64"
path = "fuzz_targets/gapped_64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_128"
path = "fuzz_targets/gapped_128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gapped_256"
path = "fuzz_targets/gapped_256.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compact_decode"
path = "fuzz_targets/compact_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitmap_roundtrip"
path = "fuzz_targets/bitmap_roundtrip.rs"
test = false
doc = false
bench = false

# Build the fuzz target with debug assertions and overflow checks on.
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
