[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
publish = false

[lints]
workspace = true

[features]
default = []
ec2-bench = [
    "dep:aws-config",
    "dep:aws-sdk-ec2",
    "dep:aws-sdk-iam",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-ssm",
    "dep:aws-sdk-sts",
    "dep:tokio",
]

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
aws-config = { version = "1.9.0", optional = true }
aws-sdk-ec2 = { version = "1.239.0", optional = true }
aws-sdk-iam = { version = "1.114.0", optional = true }
aws-sdk-s3 = { version = "1.138.0", optional = true }
aws-sdk-ssm = { version = "1.115.0", optional = true }
aws-sdk-sts = { version = "1.108.0", optional = true }
clap = { version = "4.6.1", features = ["derive"] }
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "net", "time", "io-util"], optional = true }

[dev-dependencies]
insta = "1.48.0"
