[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
