[package]
name = "arity-arrays"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
arity-bitmap.workspace = true
arity-index.workspace = true
hybrid-array = "0.4.12"

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
