[package]
name = "arity-arrays"
version = "0.2.0-alpha.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fixed and pointer-sized heap-packed arrays over a generic arity, indexed without bounds checks"
readme = "README.md"
autobenches = false
keywords = ["array", "sparse", "packed", "trie", "no-std"]
categories = ["no-std", "data-structures", "memory-management"]

[dependencies]
arity-bitmap = { workspace = true, default-features = false }
arity-index = { workspace = true, default-features = false }
hybrid-array = "0.4.12"
serde = { version = "1", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_with = { version = "3.21", optional = true, default-features = false, features = ["alloc"] }

[features]
default = ["8", "16", "32", "64", "128", "256"]
"8" = ["arity-index/8", "arity-bitmap/8"]
"16" = ["arity-index/16", "arity-bitmap/16"]
"32" = ["arity-index/32", "arity-bitmap/32"]
"64" = ["arity-index/64", "arity-bitmap/64"]
"128" = ["arity-index/128", "arity-bitmap/128"]
"256" = ["arity-index/256", "arity-bitmap/256"]
serde = ["dep:serde", "arity-index/serde", "hybrid-array/serde"]
serde_with = ["dep:serde_with", "serde"]
std = ["serde?/std", "serde_with?/std", "arity-index/std", "arity-bitmap/std"]

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.2"
insta = "1.48.0"
proptest = "1.11.0"
serde_json = "1"
serde_with = { version = "3.21", features = ["macros"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "trie"
harness = false
