[package]
name = "arity-bitmap"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fixed-width bitmaps (u8-u128, U256) indexed by niche integers, with a double-ended set-bit iterator"
readme = "README.md"
keywords = ["bitmap", "bitset", "niche", "no-std", "u256"]
categories = ["no-std", "data-structures"]

[dependencies]
arity-index.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
