[package]
name = "arity-bitmap"
version = "0.2.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fixed-width bitmaps (u8-u128, U256) indexed by niche integers, with a double-ended set-bit iterator"
readme = "README.md"
keywords = ["bitmap", "bitset", "niche", "no-std", "u256"]
categories = ["no-std", "data-structures"]

[dependencies]
arity-index = { workspace = true, default-features = false }
ethnum = { version = "1.5.3", default-features = false, optional = true }

[features]
default = ["8", "16", "32", "64", "128", "256"]
"8" = ["arity-index/8"]
"16" = ["arity-index/16"]
"32" = ["arity-index/32"]
"64" = ["arity-index/64"]
"128" = ["arity-index/128"]
"256" = ["arity-index/256", "dep:ethnum"]
std = ["arity-index/std"]

[lints]
workspace = true

[dev-dependencies]
proptest = "1.11.0"
