[package]
name = "arity-index"
version = "0.1.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bounds-check-free niche integer index types (U3-U7) with double-ended range iterators"
readme = "README.md"
keywords = ["niche", "integer", "index", "no-std", "bitfield"]
categories = ["no-std", "data-structures", "rust-patterns"]

[dependencies]
seq-macro = "0.3.6"
serde = { version = "1", optional = true, default-features = false }

[lints]
workspace = true

[features]
default = ["8", "16", "32", "64", "128", "256"]
"8" = []
"16" = []
"32" = []
"64" = []
"128" = []
"256" = []
serde = ["dep:serde"]
std = ["serde?/std"]

[dev-dependencies]
serde_json = "1.0.150"
