[package]
name = "xtask"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }

[lints]
workspace = true
